--- a/index.html
+++ b/index.html
@@ -4,13 +4,47 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Barbearia Alura</title>
+  <link href="reset.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+
+  <header>
+    <h1 class="titulo-principal"> BARBEARIA LA ROSA</h1>
+  </header>
+
+  <div class="principal">
+
+    <img src="banner.jpg">
+
+    <h1 class="texto-centralizado">Sobre a barbearia La Rosa</h1>
+
+    <p><b>Localizada em <em>São José dos Pinhais, Paraná</em>, A <strong>Barbearia La Rosa</strong> A Barbaearia La Rosa é conhecida por seu estilo único, combinando o charme vintage com toques modernos. Seus experientes barbeiros oferecem cortes de cabelo e barba de alta qualidade, enquanto os clientes desfrutam de uma atmosfera acolhedora e amigável. Com uma seleção exclusiva de produtos de cuidados masculinos, a La Rosa é mais do que uma barbearia, é uma experiência de estilo e cuidado pessoal. </b> </p>
+
+    <p id="missão"><em>Nossa missão é: <strong>"Proporcionar experiência única de cuidado masculino em ambiente acolhedor e estiloso."</em></strong>.</p>
+
+    <p>Oferecemos serviços com profissionais experientes, acompanhando as mudanças no mundo da beleza, com padrão de excelência e agilidade, garantindo a satisfação e qualidade para nossos clientes.</p>
+  </div>
+
+  <div class="beneficios">
+    <h3 class="texto-centralizado">Benefícios</h3>
+    <ul>
+
+      <li class="item">ambiente convidativo</li>
+      <li class="item">Atendimento com padrão de excelência</li>
+      <li class="item">Produtos Exclusivos</li>
+      <li class="item">Profissionais Qualificados</li>
+    </ul>
+    <img class="imagem-beneficios" src="beneficios.jpg">
+    
+
+  </div>
+
+  <a href="produtos.html">produtos</a>
+
+
 </body>
 
 </html>
