--- a/produtos.html
+++ b/produtos.html
@@ -3,38 +3,56 @@
 <html>
   <head>
 <meta charset="UTF-8">
-    <meta name="viewport" content="widht-device-widht" >
-    <link rel="stylestreet" href="produtos.css>
-    <title> barbearia la rosa </title>
- </head>
+    <meta name="vilport" content="widht-device-widht">
+      <link rel="stylesheet" href="produtos.css">
+    <title>produtos-barbearia</title>
+"
+  </head>
 
   <body>
     <header>
-      <div class="caixa">
-      <h1> <img src="logo.png"> </h1>
+      <h1> <img src="logo.png"</h1>
 
+    <nav>
+      <ul>
+   <li><a href="index.html">home</a></li>
+   <li><a>produtos</a></li>
+   <li><a>contato</a></li>
+
+      </ul>
     </nav>
-    <ul>
-   <li> <a href="index.html"> home </a></li>
-   <li> <a href="produtos.html"> produtos </a></li>
-   <li> <a href="contato.html"> contato </a>
-    </ul>
-  </nav>
-  </header>
+    </header>
 
-  <main> 
-    <ul class ="produtos">
+    <main>
+<ul class="produtos">
 <li>
-  <h2>cabelo</h2>
-  <img src="cabelo.jpg">
-  <p class "produtos-descriçao"> na tesoura ou na maquina, como o cliente preferir</p>
-  <img scr="produto preço"> R$25,00</p>
-  </li>
-      <h>barba </h2>
-      <img src "cabelo+barba.jpg">
-      <p class "produto-descriçao">pacote completo de cabelo e barba</p>
-      <p class "produto-preço">R$35,00</p>
-    </li>
-    </ul>
-  </main>
-  
+<h2>cabelo</h2>
+<img src="cabelo.jpg">
+<p class="produto-descricao">Na tesoura ou na máquina, como o cliente
+preferir</p>
+<p class="produto-preco"> R$25,00</p>
+</li>
+
+<li>
+<h2>Barba</h2>
+<img src="barba.jpg">
+<p class="produto-descricao">corte e desenho profissional de barba</p>
+<p class="produto-preco">R$18,00</p>
+</li>
+
+<li>
+<h2>Cabelo mais Barba</h2>
+<img src="cabelo+barba.jpg">
+<p class="produto-descricao">pacote completo de corte cabelo e barba</p>
+<p class="produto-preco">R$35,00</p>
+</li>
+</ul>
+    </main>
+
+    <footer>
+      <img src="logo-branco.png">
+      <p class="copyright">Barbearia Alura - 2019</p>
+    </footer>
+
+  </body>
+</html>
